--- a/Index.html
+++ b/Index.html
@@ -1,43 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Vackaso Flipbook</title>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4/turn.min.js"></script>
-
+  <title>Vackaso Digital Booklet</title>
   <style>
     body {
       margin: 0;
       background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    #flipbook {
-      width: 90vw;
-      height: 90vh;
     }
     iframe {
       width: 100%;
-      height: 100%;
+      height: 100vh;
       border: none;
     }
   </style>
 </head>
-
 <body>
-  <div id="flipbook">
-    <div><iframe src="brochure.pdf"></iframe></div>
-    <div><iframe src="brochure.pdf#page=2"></iframe></div>
-  </div>
-
-  <script>
-    $("#flipbook").turn({
-      autoCenter: true
-    });
-  </script>
+  <iframe src="brochure.pdf"></iframe>
 </body>
 </html>
+
